# splash

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  make_deps.sh
src/: CMakeLists.txt  config.h.cmake
src/controller/: colorcalibrator.cpp  controller.cpp  controller_blender.cpp  controller_gui.cpp  controller_gui.h  controller_pythonembedded.cpp  controller_tui.cpp  controller_tui.h  geometriccalibrator.cpp  geometriccalibrator.h  texcoordgenerator.cpp  window_mover.cpp  window_mover.h
src/controller/python/: python_sink.cpp
src/controller/widget/: widget.cpp  widget_calibration.cpp  widget_camera.cpp  widget_media.cpp  widget_textures_view.cpp  widget_warp.cpp
src/core/: attribute.h  base_object.h  buffer_object.h  constants.h  coretypes.h  factory.cpp  root_object.h  scene.cpp  scene.h  world.cpp  world.h
src/graphics/: camera.cpp  camera.h  filter.cpp  filter_black_level.cpp  filter_color_curves.cpp  filter_custom.cpp  filter_custom.h  filter_isf.cpp  filter_isf.h  geometry.cpp  object.cpp  shader.cpp  texture.cpp  texture_image.cpp  virtual_probe.cpp  warp.cpp  window.cpp  window.h  xrcamera.cpp  xrcamera.h
src/image/: image.cpp  image_ffmpeg.cpp  image_ffmpeg.h  image_gphoto.cpp  image_list.cpp  image_opencv.cpp  image_sequence.h  image_shmdata.cpp  image_v4l2.cpp  queue.cpp
src/mesh/: mesh.cpp  mesh_bezierpatch.cpp  mesh_shmdata.cpp
src/network/: link.cpp  socket_client.cpp  socket_client.h  socket_message.cpp  socket_message.h  socket_messages.h  websocket_client.cpp  websocket_client.h  websocket_server.cpp  websocket_server.h
src/remote/: CMakeLists.txt  remote.cpp
src/sink/: sink.cpp  sink_shmdata.cpp  sink_shmdata_encoded.cpp
src/sound/: ltcclock.cpp  ltcclock.h
src/userinput/: userinput.cpp  userinput_dragndrop.cpp  userinput_joystick.cpp  userinput_keyboard.cpp  userinput_mouse.cpp
src/utils/: jsonutils.cpp  jsonutils.h  log.h  osutils.h
tests/: CMakeLists.txt  websocket_server.cpp
tests/integration_tests/test_cases/: test_geometric_calibrator.py
tests/unit_tests/controller/: colorcalibrator.cpp
tests/unit_tests/core/: factory.cpp  root_object.cpp
tests/unit_tests/graphics/: filter_isf.cpp
tests/unit_tests/image/: image_list.cpp
